--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@uniswap/routing-api",
+  "name": "@taraswap/routing-api",
   "version": "0.1.0",
   "bin": {
     "app": "./dist/bin/app.js"
   },
   "license": "GPL",
-  "repository": "https://github.com/Uniswap/routing-api",
+  "repository": "https://github.com/taraswap/taraswap-routing-api",
   "scripts": {
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir lib/types/ext 'lib/abis/**/*.json'",
     "compile-v3-contract-types": "npx typechain --target ethers-v5 --out-dir lib/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
@@ -83,16 +83,16 @@
     "@types/sinon": "^10.0.6",
     "@types/stats-lite": "^2.2.0",
     "@uniswap/default-token-list": "^11.13.0",
-    "@uniswap/permit2-sdk": "^1.3.0",
-    "@uniswap/router-sdk": "^1.9.2",
-    "@uniswap/sdk-core": "^5.3.0",
+    "@taraswap/permit2-sdk": "^1.0.2",
+    "@taraswap/router-sdk": "^1.0.11",
+    "@taraswap/sdk-core": "^1.1.2",
     "@types/semver": "^7.5.8",
-    "@uniswap/smart-order-router": "3.35.6",
+    "@taraswap/smart-order-router": "3.35.8",
     "@uniswap/token-lists": "^1.0.0-beta.33",
-    "@uniswap/universal-router-sdk": "^2.2.0",
-    "@uniswap/v2-sdk": "^4.3.2",
+    "@taraswap/universal-router-sdk": "^1.0.13",
+    "@taraswap/v2-sdk": "^1.0.5",
     "@uniswap/v3-periphery": "^1.4.4",
-    "@uniswap/v3-sdk": "^3.13.0",
+    "@taraswap/v3-sdk": "^1.0.5",
     "async-retry": "^1.3.1",
     "aws-cdk-lib": "^2.137.0",
     "aws-embedded-metrics": "^2.0.6",
