--- a/lib/config/rpcProviderProdConfig.json
+++ b/lib/config/rpcProviderProdConfig.json
@@ -1,99 +1,18 @@
 [
   {
-    "chainId": 42220,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.1,
-    "healthCheckSampleProb": 0.1,
-    "providerInitialWeights": [1],
-    "providerUrls": ["QUICKNODE_42220"]
-  },
-  {
-    "chainId": 43114,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.1,
-    "healthCheckSampleProb": 0.1,
-    "providerInitialWeights": [1],
-    "providerUrls": ["QUICKNODE_43114"]
-  },
-  {
-    "chainId": 56,
+    "chainId": 841,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0.01,
     "healthCheckSampleProb": 0.01,
     "providerInitialWeights": [1],
-    "providerUrls": ["QUICKNODE_56"]
+    "providerUrls": ["TARAXA_841"]
   },
   {
-    "chainId": 10,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.1,
-    "healthCheckSampleProb": 0.01,
-    "providerInitialWeights": [1, 0],
-    "providerUrls": ["QUICKNODE_10", "ALCHEMY_10"]
-  },
-  {
-    "chainId": 11155111,
+    "chainId": 842,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0.01,
     "healthCheckSampleProb": 0.01,
     "providerInitialWeights": [1],
-    "providerUrls": ["ALCHEMY_11155111"],
-    "enableDbSync": true
-  },
-  {
-    "chainId": 137,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.25,
-    "healthCheckSampleProb": 0.005,
-    "providerInitialWeights": [1, 0],
-    "providerUrls": ["QUICKNODE_137", "ALCHEMY_137"]
-  },
-  {
-    "chainId": 42161,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.1,
-    "healthCheckSampleProb": 0.002,
-    "providerInitialWeights": [1, 0],
-    "providerUrls": ["QUICKNODE_42161", "ALCHEMY_42161"]
-  },
-  {
-    "chainId": 8453,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.05,
-    "healthCheckSampleProb": 0.0005,
-    "providerInitialWeights": [1, 0],
-    "providerUrls": ["QUICKNODE_8453", "ALCHEMY_8453"]
-  },
-  {
-    "chainId": 1,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.05,
-    "healthCheckSampleProb": 0.001,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["ALCHEMY_1", "QUICKNODE_1"]
-  },
-  {
-    "chainId": 81457,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.001,
-    "healthCheckSampleProb": 0.001,
-    "providerInitialWeights": [1],
-    "providerUrls": ["QUICKNODE_81457"]
-  },
-  {
-    "chainId": 7777777,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.001,
-    "healthCheckSampleProb": 0.001,
-    "providerInitialWeights": [1],
-    "providerUrls": ["QUICKNODE_7777777"]
-  },
-  {
-    "chainId": 324,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0.01,
-    "healthCheckSampleProb": 0.01,
-    "providerInitialWeights": [1, 0],
-    "providerUrls": ["QUICKNODE_324", "ALCHEMY_324"]
+    "providerUrls": ["TARAXA_842"]
   }
 ]
